fix hide on mobile

--- a/SchnoodleDApp/ClientApp/src/custom.css
+++ b/SchnoodleDApp/ClientApp/src/custom.css
@@ -37,10 +37,10 @@ input[type=number] {
   @apply ml-0 text-xs md:text-xl px-1 md:px-4;
 }
 .hidemd {
-  @apply inline-block md:hidden;
+  @apply block md:hidden;
 }
 .hidesm {
-  @apply hidden md:inline-block;
+  @apply hidden md:block;
 }
 .textfade {
   @apply bg-clip-text text-transparent bg-gradient-to-r;
